tests/semantic_cases/invalid/while_undefined_in_body.ob0
(* INVALID: WHILE body references undefined symbol *)
MODULE Main;
VAR x: INTEGER;
BEGIN
  x := 1;
  WHILE x DO
    x := y - 1
  END
END Main.
